<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dip" >

    <Button
        android:id="@+id/btnSelectMapLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectLocation" />

    <EditText
        android:id="@+id/txtAdditionalEventData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/defaultEventAdditionalData"
        android:inputType="textMultiLine"
        android:lines="3"
        android:singleLine="false" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblSelRadius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/selectRadius" />

<!--         <EditText -->
<!--             android:id="@+id/txtRadius" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_weight="2" -->
<!--             android:inputType="number" > -->

<!--             <requestFocus /> -->
<!--         </EditText> -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/minRadius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingTop="7dip"
            android:paddingRight="3dip"
            android:text="50" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/maxRadius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingTop="7dip"
            android:paddingLeft="3dip"
            android:text="5000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyStartDateTimeLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/startDate" />

        <TextView
            android:id="@+id/lblStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/startTime" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyStartDateTimePick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyStartDateTimeLbl"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSelectStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="26 - 11 - 2011" >
        </Button>

        <Button
            android:id="@+id/btnSelectStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="15:45" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyTimeLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/endDate" />

        <TextView
            android:id="@+id/lblEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/endTime" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyTimePick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSelectEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="27 - 11 - 2011" >
        </Button>

        <Button
            android:id="@+id/btnSelectEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="00:45" >
        </Button>
    </LinearLayout>

</LinearLayout>